--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,2 +1,29 @@
-body {
-  background: green; }
+body,
+html {
+  width: 100%;
+  height: 100%; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box; }
+  .wrapper .box {
+    margin: 20px 0;
+    width: 100%;
+    height: 45px;
+    display: flex;
+    overflow: hidden;
+    border-radius: 10px;
+    border: 1px solid #ccc; }
+    .wrapper .box input {
+      border: none;
+      outline: none;
+      flex: 1; }
+    .wrapper .box button {
+      outline: none;
+      border: none; }
