--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,35 @@
-body {
-    background: green;
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    .box {
+        margin: 20px 0;
+        width: 100%;
+        height: 45px;
+        display: flex;
+        overflow: hidden;
+        border-radius: 10px;
+        border: 1px solid#ccc;
+        input {
+            border: none;
+            outline: none;
+            flex: 1;
+        }
+        button {
+            outline: none;
+            border: none;
+        }
+    }
 }
