--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,7 +11,8 @@ html {
   width: 100%;
   height: 100%;
   padding: 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background: #ffffffbd; }
   .wrapper .box {
     margin: 20px 0;
     width: 100%;
@@ -19,11 +20,10 @@ html {
     display: flex;
     overflow: hidden;
     border-radius: 10px;
-    border: 1px solid #ccc; }
+    border: 1px solid #ccc;
+    button-outline: none;
+    button-border: none; }
     .wrapper .box input {
       border: none;
       outline: none;
       flex: 1; }
-    .wrapper .box button {
-      outline: none;
-      border: none; }
