--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@ html {
     height: 100%;
     padding: 20px;
     box-sizing: border-box;
+    background: #ffffffbd;
     .box {
         margin: 20px 0;
         width: 100%;
@@ -27,7 +28,7 @@ html {
             outline: none;
             flex: 1;
         }
-        button {
+        button: {
             outline: none;
             border: none;
         }
